--- a/day_1/app/styles/main.scss
+++ b/day_1/app/styles/main.scss
@@ -3,4 +3,21 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  position: relative;
+
+  p {
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    text-align: center;
+    color: #e74c3c;
+    font-family: 'Dosis';
+  }
+
+  canvas {
+    position: relative;
+    z-index: 1;
+  }
 }
